--- a/index.html
+++ b/index.html
@@ -14,30 +14,37 @@
     
     </head>
 <body>
-
     <header>
-        <nav class="navbar navbar-light bg-light">
-            <h1>Endereçamento das paginas</h1>
-        </nav>
+        <div class="container" id="nav-container">
+            <nav class="navbar navbar-expand-lg fixed-top navbar-dark" >
+                <a href="#" class="navbar-brand">
+                    <img src="assets/img/theme/logo_laced.png" alt="Logo Laced" id="logo"> 
+                </a>              
+            </nav>
+        </div>
     </header>
     <main>
-        <div class="container" id="table_telas">
-            <h2>Lista de Paginas</h2>
-            <table class="table table-striped table-bordered">
+        <div class="container container-center" id="container_table">
+            <h4>Lista de Disciplinas</h4>
+            <table class="table table-striped" id="table_disciplina">
                 <thead>
                     <tr>
-                        <th scope="col">Pagina</th>
-                        <th scope="col">Entrar na pagina</th>
+                        <th>Pagins</th>
+                        <th>Acesso</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <th>Disciplinas</th>
-                        <td><a href="pages/diciplinas.html" alt="Pagina de Diciplinas" target="_blank">Entrar em diciplinas</a></td>
+                        <td>Disciplinas</td>
+                        <td><a href="pages/diciplinas.html" target="_blank">Entrar</a></td>
                     </tr>
                     <tr>
-                        <th>Mudar senha</th>
-                        <td><a href="pages/mudarsenha.html" alt="Pagina de mudar senha" target="_blank">Mudar senha</a></td>
+                        <td>Register</td>
+                        <td><a href="pages/register2.html" target="_blank">Entrar</a></td>
+                    </tr>
+                    <tr>
+                        <td>Mudar senha</td>
+                        <td><a href="pages/mudarsenha.html" target="_blank">Entrar</a></td>
                     </tr>
                 </tbody>
             </table>
