--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             </table>
         </div>
     </main>
-
+    <footer style="align-items: center;">
+        <p> Lorem | Ipsum | Dolor | Sit amet | Aliquip</p>
+    </footer>
 </body>
 </html>
