--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <div class="container container-center" id="container_table">
-            <h4>Lista de Disciplinas</h4>
+            <h4>Lista de Paginas</h4>
             <table class="table table-striped" id="table_disciplina">
                 <thead>
                     <tr>
