--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <table class="table table-striped" id="table_disciplina">
                 <thead>
                     <tr>
-                        <th>Pagins</th>
+                        <th>Paginas</th>
                         <th>Acesso</th>
                     </tr>
                 </thead>
