--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
         <div class="container container-center" id="container_table">
             <h4>Lista de Paginas</h4>
-            <table class="table table-striped" id="table_disciplina">
+            <table class="table table-striped" id="table_paginas">
                 <thead>
                     <tr>
                         <th>Paginas</th>
@@ -39,7 +39,7 @@
                         <td><a href="pages/diciplinas.html" target="_blank">Entrar</a></td>
                     </tr>
                     <tr>
-                        <td>Register</td>
+                        <td>Login</td>
                         <td><a href="pages/register2.html" target="_blank">Entrar</a></td>
                     </tr>
                     <tr>
