troca de nome da tela
A tela login estava com o nome  de register2

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </tr>
                     <tr>
                         <td>Login</td>
-                        <td><a href="pages/register2.html" target="_blank">Entrar</a></td>
+                        <td><a href="pages/login.html" target="_blank">Entrar</a></td>
                     </tr>
                     <tr>
                         <td>Mudar senha</td>
