--- a/pages/diciplinas.html
+++ b/pages/diciplinas.html
@@ -50,7 +50,7 @@
     </header>
     <!--Tabela-->
     <main>
-        <div class="container" id="area-tabela">
+        <div class="container" id="container_table">
             <button id="butao-tabela">Criar</button>
             <h4>Lista de Disciplinas</h4>
             <table id="tabela">
