--- a/pages/loginUm.html
+++ b/pages/loginUm.html
@@ -17,9 +17,11 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-8 apply-box" id="posicao-logo">
-                    <img src="../assets/img/brand/logo_laced.png" alt="logo Laced">
+                    <img src="../assets/img/brand/logoGM.png" alt="logo Laced" class="vertical-align" id="logoG">
                 </div>
-                <div class="col-md-4 apply-box" id="posicao-formulario">
+                <div class="col-md apply-box" id="posicao-formulario">                    
+                    <img src="../assets/img/brand/logoP.png" alt="logo laced" id="logoP" class="horizontal-align">
+                    <img src="../assets/img/brand/logoGM.png" alt="logo laced" id="logoM" class="horizontal-align">
                     <div id="form">
                         <h2>FAÇA SEU LOGIN!</h2>
                         <form action="">
