--- a/pages/loginUm.html
+++ b/pages/loginUm.html
@@ -16,20 +16,22 @@
     <div id="apply-area">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-8 apply-box" id="posicao-logo">
-                    <img src="../assets/img/brand/logoGM.png" alt="logo Laced" class="vertical-align" id="logoG">
+                <!-- Parte Verde - Logo-->
+                <div class="col-md-4 apply-box" id="posicao-logo">
+                    <img src="../assets/img/brand/logoP.png" alt="logo Laced" class="vertical-align" id="logoP">
+                    <img src="../assets/img/brand/boneco_podio401.png" alt="Boneo vencedor"  id="boneco">
                 </div>
+
+                <!--Parte Branca - Formulario-->
                 <div class="col-md apply-box" id="posicao-formulario">                    
-                    <img src="../assets/img/brand/logoP.png" alt="logo laced" id="logoP" class="horizontal-align">
-                    <img src="../assets/img/brand/logoGM.png" alt="logo laced" id="logoM" class="horizontal-align">
-                    <div id="form">
+                    <div id="divform">
                         <h2>FAÇA SEU LOGIN!</h2>
                         <form action="">
-                            <label for="matricula">Matricula:</label>
+                            <label for="matricula">Matricula</label>
                             <input type="text" name="matricula" id="matricla">
-                            <label for="senha">Senha:</label>
+                            <label for="senha">Senha</label>
                             <input type="password" name="senha" id="senha">
-                            <input type="submit" value="LOGIN" id="butao">
+                            <input type="submit" value="Acessar" id="butao" class="bnt">
                         </form>
                     </div>
                 </div>
