--- a/pages/loginUm.html
+++ b/pages/loginUm.html
@@ -25,15 +25,24 @@
                 <!--Parte Branca - Formulario-->
                 <div class="col-md apply-box" id="posicao-formulario">                    
                     <div id="divform">
+                        <div>
+                            <div id="banner"></div>
+                        </div>
+
                         <h2>FAÇA SEU LOGIN!</h2>
-                        <form action="">
+                        <form action="" id="form">
                             <label for="matricula">Matricula</label>
                             <input type="text" name="matricula" id="matricla">
                             <label for="senha">Senha</label>
                             <input type="password" name="senha" id="senha">
                             <input type="submit" value="Acessar" id="butao" class="bnt">
                         </form>
-                    </div>
+
+                        <div id="boneco_responsivo">
+                            <div>
+                                <img src="../assets/img/brand/boneco_podio401.png" alt="Boneco" id="boneco_tablet">
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
