--- a/pages/loginUm.html
+++ b/pages/loginUm.html
@@ -16,12 +16,14 @@
     <div id="apply-area">
         <div class="container-fluid">
             <div class="row">
+                <!--Boneco-->
+                <img src="../assets/img/brand/boneco_podio401.png" alt="Boneco vencedor"  id="boneco">
+                
                 <!-- Parte Verde - Logo-->
                 <div class="col-md-4 apply-box" id="posicao-logo">
                     <img src="../assets/img/brand/logoP.png" alt="logo Laced" class="vertical-align" id="logoP">
-                    <img src="../assets/img/brand/boneco_podio401.png" alt="Boneo vencedor"  id="boneco">
                 </div>
-
+            
                 <!--Parte Branca - Formulario-->
                 <div class="col-md apply-box" id="posicao-formulario">                    
                     <div id="divform">
@@ -32,17 +34,13 @@
                         <h2>FAÇA SEU LOGIN!</h2>
                         <form action="" id="form">
                             <label for="matricula">Matricula</label>
-                            <input type="text" name="matricula" id="matricla">
+                            <input type="text" name="matricula" id="matricula" class="digitar">
                             <label for="senha">Senha</label>
-                            <input type="password" name="senha" id="senha">
+                            <input type="password" name="senha" id="senha" class="digitar">
                             <input type="submit" value="Acessar" id="butao" class="bnt">
                         </form>
 
-                        <div id="boneco_responsivo">
-                            <div>
-                                <img src="../assets/img/brand/boneco_podio401.png" alt="Boneco" id="boneco_tablet">
-                            </div>
-                        </div>
+
                 </div>
             </div>
         </div>
