--- a/pages/login.html
+++ b/pages/login.html
@@ -37,6 +37,15 @@
                             <input type="text" name="uname" id="matricula" class="digitar" required>
                             <label for="psw">Senha</label>
                             <input type="password" name="psw" id="senha" class="digitar" required>
+
+                            <div class="container">
+                                <label for="remember"> 
+                                    Remember me <input type="checkbox"  name="remember" chequed id="remember">
+                                </label>
+
+                                <a href="recuperarsenha.html">Esqueceu a senha?</a>
+                            </div>
+
                             <input type="submit" value="Acessar" id="butao" class="bnt">
                         </form>
                 </div>
