--- a/pages/index.html
+++ b/pages/index.html
@@ -40,10 +40,12 @@
 
                             <div class="container">
                                 <label for="remember"> 
-                                    Remember me <input type="checkbox"  name="remember" chequed id="remember">
+                                    <input type="checkbox"  name="remember" chequed id="remember"> Remember me 
                                 </label>
 
+                            
                                 <a href="recuperarsenha.html">Esqueceu a senha?</a>
+                                
                             </div>
 
                             <input type="submit" value="Acessar" id="butao" class="bnt">
