alteração que ota pediu

--- a/pages/indexota.html
+++ b/pages/indexota.html
@@ -26,7 +26,7 @@
                     <button type="submit" class="btn">Login</button>
                     
                     <label id="check">
-                        <input type="checkbox" checked="checked" name="remember" id="caixinha"> Remember me
+                        <input type="checkbox" checked="checked" name="remember" id="caixinha"> Lembre de mim
                     </label>
                 </div>
 
