--- a/pages/indexota.html
+++ b/pages/indexota.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="../assets/css/loginota.css">
 </head>
 <body>
+    <img src="../assets/img/brand/AvA-151x60.png" alt="Logo AVA" id="logo">
+    
     <div class="container">
-
-        <img src="../assets/img/brand/AvA-151x60.png" alt="">
-
         <div class="box-1">
             <form action="login.php" method="post">
                 <h2>Faça seu login</h2>
