--- a/emailnegado.html
+++ b/emailnegado.html
@@ -13,16 +13,12 @@
     <div class="container">
         <div class="box-1" id="boxvermelha">
             <form action="login.php" method="post">
-                <h2>Email negado</h2>
+                <h2 class="h2erro">Erro</h2>
                     <p>
-                        Volte e tente novamente com o email correto.
+                        _MAIL_ não encontrado. 
                     </p>
                     
-                    <a href="recuperarsenha.html" >
-                        <div class="voltar" id="vterro">
-                            Voltar para a tela de recupeção de senha
-                        </div>
-                    </a>
+                    <button type="submit" class="btn erro">Tentar Novamente</button>
                 </div>
             </form>
 
