--- a/loginerrado.html
+++ b/loginerrado.html
@@ -13,17 +13,12 @@
     <div class="container">
         <div class="box-1" id="boxvermelha">
             <form action="login.php" method="post">
-                <h2>Acesso negado</h2>
+                <h2 class="h2erro">Erro</h2>
                     <p>
-                        O email ou a senha informados estam errados. Verifique suas informações e tente novamente.
+                        O email ou a senha informados estam errados.
                     </p>
                     
-                    <a href="index.html" >
-                        <div class="voltar" id="vterro">
-                            Voltar para a tela inical
-                        </div>
-                    </a>
-                </div>
+                <button type="submit" class="btn erro">Tentar Novamente</button>
             </form>
 
         </div>
