--- a/senhamodificada.html
+++ b/senhamodificada.html
@@ -14,16 +14,9 @@
         <div class="box-1">
             <form action="login.php" method="post">
                 <h2>Senha modificado com sucesso!</h2>
-                    <p>
-                        Volte para a tela inicial e faça o que se pede.
-                    </p>
-                    
-                    <a href="index.html" >
-                        <div class="voltar">
-                            Voltar para a tela inical
-                        </div>
-                    </a>
-                </div>
+
+                <button type="submit" class="btn erro">Volte para a tela inicial</button>
+
             </form>
 
         </div>
