--- a/emailaceito.html
+++ b/emailaceito.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email aceito</title>
+    <title>Email Aceito</title>
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
@@ -12,22 +12,14 @@
     
     <div class="container">
         <div class="box-1">
-            <form action="login.php" method="post">
-                <h2>Email enviado com sucesso!</h2>
-                    <p>
-                        Verifique sua caixa de entrada para prosseguir com a troca de senha.
-                    </p>
-                    
-                    <a href="index.html" >
-                        <div class="voltar">
-                            Voltar para a tela inical
-                        </div>
-                    </a>
-                </div>
+            <form action="javascript:location.replace('index.html');" method="post">
+            <h2>Email enviado com sucesso</h2>
+            <p>
+                Verifique sua caixa de entrada para prosseguir com a troca de senha.
+            </p>
+            <button class="btn">Voltar para a tela inicial</button>
             </form>
-
         </div>
-
     </div>
 </body>
 </html>
