--- a/loginerrado.html
+++ b/loginerrado.html
@@ -11,14 +11,14 @@
     <img src="assets/img/AvA-151x60.png" alt="Logo AVA" id="logo">
     
     <div class="container">
-        <div class="box-1" id="boxvermelha">
-            <form action="login.php" method="post">
+        <div class="box-1">
+            <form action="javascript:location.replace('index.html');" method="post">
                 <h2 class="h2erro">Erro</h2>
                     <p>
-                        O email ou a senha informados estam errados.
+                        O email ou senha informados estão errados.
                     </p>
                     
-                <button type="submit" class="btn erro">Tentar Novamente</button>
+                <button type="submit" class="btn">Tentar Novamente</button>
             </form>
 
         </div>
