--- a/Template-AvA/AvA/disciplina.html
+++ b/Template-AvA/AvA/disciplina.html
@@ -27,9 +27,9 @@
 		<div class="d-flex flex-column flex-root">
 			<!--begin::Page-->
 			<div class="page d-flex flex-row flex-column-fluid">
-
 				<!--begin::Wrapper-->
 				<div class="wrapper d-flex flex-column flex-row-fluid" id="kt_wrapper" >
+					
 					<!--begin::Header-->
 					<div id="kt_header" class="header">
 						<!--begin::Container-->
@@ -200,21 +200,19 @@
 						<!--end::Container-->
 					</div>
 					<!--end::Header-->
+
 					<!--begin::Main-->
 					<div class="d-flex flex-column flex-column-fluid">
-						<!--begin::toolbar-->
-
-						<!--end::toolbar-->
 						<!--begin::Content-->
-						<div class="content fs-6 d-flex flex-column-fluid" id="kt_content">
+						<div class="content fs-6 d-flex flex-column-fluid justify-content-center" id="kt_content">
 							<!--begin::Container--><!--Container principal-->
 							<div class="container">
 								<!--Begin::Row-->
-								<div class="row g-5 g-xxl-8">
+								<div class="row justify-content-md-center">
 
 									<!-- Primeira coluna do Conteúdo -->
 
-									<div class="col-xl-6">
+									<div class="col-xl-4_5">
 										<div class="card mb-10 mb-md-0">
 											<!--begin::Body-->
 											<div class="card-body py-10 px-6">
@@ -243,7 +241,7 @@
 														</form>
 														<!--end::Form-->
 														<a class="btn btn-primary" href="#" role="button">
-															+Add
+															Adicionar
 														</a>
 													</div>
 												</div>
@@ -254,19 +252,14 @@
 													<li class="menu-content fw-bold pb-2 px-3">
 														<span class="fs-3 fw-bolder">Alunos</span>
 													</li>
-													<li class="menu-item px-3 pb-1 d-flex flex-stack"> 
-														<a href="#" class="menu-link">Fulano</a>
-														<a class="btn btn-primary btn-edit" href="#" role="button">Editar</a>
-														<a class="btn btn-primary btn-delete" href="#" role="button">Deletar</a>
+													<li class="menu-item px-3 pb-1"> 
+														<a href="#" class="menu-link fs-6 px-3">Fulano</a>
 													</li>
 													<li class="menu-item px-3 pb-1">
 														<a href="#" class="menu-link fs-6 px-3">Ciclano</a>
 													</li>
 													<li class="menu-item px-3 pb-1">
 														<a href="#" class="menu-link fs-6 px-3">Beotrano</a>
-													</li>
-													<li class="menu-item px-3">
-														<a href="#" class="menu-link fs-6 px-3">Ciclanilda</a>
 													</li>
 												</ul>
 												<!--end::Alunos List-->
@@ -284,7 +277,7 @@
 												<!--begin::Info-->
 												<div class="d-flex flex-column align-items-start justify-content-center flex-wrap me-1">
 													<!--begin::Title-->
-													<h3 class="text-dark fw-bolder my-1">Disciplina</h3>
+													<h3 class="text-dark fw-bolder my-1">Algoritmos</h3>
 												</div>
 												<!--end::Info-->
 												<!--begin::Nav-->
